--- a/requirements.txt
+++ b/requirements.txt
@@ -17,25 +17,48 @@ tqdm>=4.65.0  # Progress bars
 pydantic>=2.0.0  # Data validation
 sqlalchemy>=2.0.0  # SQL ORM
 
+# GPU Acceleration
+nvidia-cuda-runtime-cu12>=12.1.0  # NVIDIA CUDA Runtime (for CUDA 12.x)
+nvidia-cuda-nvrtc-cu12>=12.1.0  # NVIDIA CUDA NVRTC 
+nvidia-cudnn-cu12>=8.9.2  # NVIDIA cuDNN
+einops>=0.6.1  # Einstein-like operations for tensor manipulation
+flash-attn>=2.3.0  # Efficient attention mechanism
+triton>=2.0.0  # GPU programming language
+nvitop>=1.1.0  # Monitoring NVIDIA GPUs
+
 # Video Processing
 ffmpeg-python>=0.2.0  # FFmpeg Python bindings
 moviepy>=1.0.3  # Video editing
 imageio>=2.27.0  # Image I/O
 av>=10.0.0  # PyAV for audio/video handling
+decord>=0.6.0  # Efficient video loading library with GPU acceleration
 
 # Machine Learning
 scikit-learn>=1.2.0  # Machine learning utilities
 sentence-transformers>=2.2.2  # Sentence embeddings
 faiss-cpu>=1.7.0  # Vector similarity search (CPU version)
-# faiss-gpu>=1.7.0  # Vector similarity search (GPU version, comment out if using CPU)
+faiss-gpu>=1.7.0  # Vector similarity search (GPU version)
 timm>=0.9.2  # PyTorch Image Models
 albumentations>=1.3.0  # Image augmentation
+kornia>=0.6.9  # Differentiable computer vision library
 
 # Deep Learning Models
 open_clip_torch>=2.20.0  # OpenAI CLIP
 bitsandbytes>=0.39.0  # Quantization utilities
 accelerate>=0.19.0  # Hugging Face accelerator
 diffusers>=0.16.0  # Diffusion models
+
+# Memory Management & Optimization
+pytorch-lightning>=2.0.0  # PyTorch Lightning
+torch-optimizer>=0.3.0  # Additional optimizers
+torch-tb-profiler>=0.4.1  # PyTorch Profiler with TensorBoard
+opt_einsum>=3.3.0  # Optimized einsum
+psutil>=5.9.5  # Process and system utilities
+
+# Parallelism
+ray>=2.3.0  # Distributed computing
+joblib>=1.2.0  # Parallel processing
+concurrent-log-handler>=0.9.20  # Thread-safe logging
 
 # UI Options (Desktop)
 PyQt5>=5.15.9  # Desktop UI framework (option 1)
